www/style.css
/* ... */
	
	button::-moz-focus-inner, input::-moz-focus-inner {
		border: 0;
		padding: 0;
	}
	
	textarea {
		overflow: auto;
		vertical-align: top;
	}
	
	table {
		border-collapse: separate;
		border-spacing: 0;
		border-width: 1px 0 0 1px;
		margin-bottom: 24px;	
		width: 100%;
		color:#444;
	}
	
	thead, .light-content .light-section thead {
		background-color:#826040;
		color:#fff;
	}
	
	.light-content thead, .dark-section thead {
		background-color:rgba(255,255,255,1);
	}
	
	thead tr, .light-content .light-section thead tr {
		color:#fff;
	}
	
	.light-content thead tr, .dark-section thead tr {
		color:#000;
	}
	
	tr, .light-content .light-section tr {
		color:#444;
	}
	
	.light-content tr, .dark-section tr{
    	color:#CCC;
	}
	
	tr:nth-child(2n), .light-content .light-section tr:nth-child(2n) {
    	background-color:rgba(0,0,0,0.05);
	}
	
	.light-content tr:nth-child(2n), .dark-section tr:nth-child(2n){
    	background-color:rgba(255,255,255,0.1);
	}
	
	caption, th, td {
		font-weight: normal;
		text-align: left;
	}
	
	th {
		border-width: 0 1px 1px 0;
		padding: 10px;
	}
	
	td {
		border-width: 0 1px 1px 0;
		padding: 10px;
	}

	.price-num {
		display: inline-block;
		min-width: 4.5ch;
		text-align: right;
	}

	.price-col {
		width: 110px;
		white-space: nowrap;
	}

	del {
		color: #767676;
	}
	
	hr {
		border: 0;
		height: 28px;
		width:100%;
		float:none;
		margin:0;
		display:inline-block;
		opacity: 1!important;
		-webkit-transition: translateY(0px)!important;
		transform: translateY(0px)!important;
	}
	
	hr.animated-line {
		height:1px;		
		padding-top:20px;
		padding-bottom:20px;
	}
	
	hr.animated-line:before {
		content: ""; 
		display: block; 
		width:0;
		height:1px;
		background:rgba(0,0,0,0.1);
	}
	
	.light-content hr.animated-line:before, .dark-section hr.animated-line:before {
		background:rgba(255,255,255,0.15);
	}
	
	.light-content .light-section hr.animated-line:before {
		background:rgba(0,0,0,0.1);
	}
	
	hr.animated.animated-line:before {
		width:100%;
		-webkit-transition: width 0.7s ease-in-out 0.1s;
		transition: width 0.7s ease-in-out 0.1s;
	}
	
	hr:after {
		clear: both;
		content: " ";
		display: block;
		height: 0;
		visibility: hidden;
	}
	
	::selection {
		background: #000;
		color: #fff;
		text-shadow: none;
	}
	
	::-moz-selection {
		background: #000;
		color: #fff;
		text-shadow: none;
	}
	
	img {
		border: 0 none;
		max-width: 100%;
		vertical-align: middle;
		height:auto;
	}
		
	h1, h2, h3, h4, h5, h6 {		
		/*font-family:inherit;*/
		font-weight:100;
		color:#000;
		margin-bottom:20px;
		letter-spacing:-0.1vw;
	}
	
	.big-title {
		font-weight:600;
		font-size: calc((1rem + 12vw) / 2);
  		line-height: calc((1rem + 14vw) / 2);
		letter-spacing:-0.2vw;
	}	
	
	h1{
		font-size: calc(1rem + 4vw);
		line-height: calc(1rem + 4vw);
	}
	
	h2{
		font-size: calc(1rem + 3vw);
		line-height: calc(1rem + 3.5vw);
	}
	
	h3{
		font-size: calc(1rem + 2vw);
		line-height: calc(1rem + 2.5vw);
	}
	
	h4{
		font-size: calc(1rem + 1vw);
		line-height: calc(1rem + 1.6vw);
		letter-spacing:-0.05vw;
	}
	
	h5{
		font-size: calc(1rem + 0.6vw);
		line-height: calc(1rem + 1.5vw);
		font-weight:500;
		letter-spacing:-0.04vw;
	}
	
	h6 {
		font-size:18px;
		line-height: 36px;
		font-weight:400;
		letter-spacing:-0.03vw;
	}
	
	h6.has-icon {
		padding-left: 20px;
		box-sizing: border-box;
		display: inline-block;
		width: auto;
		position: relative;
	}
	
	h6.has-icon::before {
		font: var(--fa-font-solid);
		content: "\f101";
		font-size: 12px;
		line-height: inherit;
		text-align: left;
		position: absolute;
		left: 0;
	}
	
	.no-margins {
		margin:0;
	}
	
	.light-content h1, .light-content h2, .light-content h3, .light-content h4, .light-content h5, .light-content h6, .dark-section h1, .dark-section h2, .dark-section h3, .dark-section h4, .dark-section h5, .dark-section h6 {
		color: #fff;
	}
	
	.light-content .light-section h1, .light-content .light-section h2, .light-content .light-section h3, .light-content .light-section h4, .light-content .light-section h5, .light-content .light-section h6 {
		color: #000;
	}
	
	p {
		font-size:18px;
		line-height: 28px;
		font-weight:400;
		margin-bottom: 10px;
		color:#000;		
	}
	
	.light-content p, .dark-section p {
		color:#fff;
	}
	
	.light-content .light-section p {
		color:#000;
	}
	
	.bigger {
		font-size: 24px;
		line-height: 36px;
		font-weight:500;
	}
	
	.smaller {
		font-size: 14px;
		line-height: 24px;
	}
	
	.container {
		max-width:1280px;
		width:100%;
		margin:0 auto;
		box-sizing:border-box;
	}
	
	.container::after {
		clear: both;
		content: " ";
		display: table;
	}
	
	a:hover, a:active {
	  outline: 0;
	  color: #000;
	}
	
	a, .light-content .light-section a {
		text-decoration: none;
		color: #000;
		outline: 0;
	}
	
	.light-content a, .dark-section a, .white-header a {
		color: #fff;
	}
	
	.light-content .white-header a { 
		color:#000;		
	}
	
	a:hover {
		text-decoration:none;
	}
	
	.one_half {
    	width: 48%!important;
	}	

	.one_third {
		width: 30.6%!important;
	}	

	.one_fourth {
		width: 22%!important;
	}	

	.one_fifth {
		width: 16.8%!important;
	}	

	.one_sixth {
		width: 13.33%!important;
	}	

	.two_fifth {
		width: 37.6%!important;
	}	

	.two_fourth {
		width: 48%!important;
	}		

	.two_third {
		width: 65.33%!important;
	}	

	.three_fifth {
		width: 58.4%!important;
	}	

	.three_fourth {
		width: 74%!important;
	}	

	.four_fifth {
		width: 79.2%!important;
	}	

	.five_sixth {
		width: 82.67%!important;
	}	

	.one_half, .one_third, .two_third, .three_fourth, .one_fourth, .two_fourth, .one_fifth, .two_fifth, .three_fifth, .four_fifth, .one_sixth, .five_sixth {
		float: left!important;
		margin-bottom: 1px!important;
		margin-right: 4%!important;
		position: relative!important;
	}

	.last {
		margin-right:0px!important;
	}
	
	.text-align-left {
		text-align:left;
	}
	
	.text-align-center {
		text-align:center;
	}
	
	.text-align-right {
		text-align:right;
	}
	
	.outer {
		display:table;
		width:100%;
		height:100%;
	}
/* ... */

